# supermarket-API

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: d82f19ed4323_initial_migration.py
app/: main.py
app/application/commands/: auth_commands.py  inventory_commands.py  order_commands.py  product_commands.py
app/application/dtos/: auth_dtos.py  inventory_dtos.py  order_dtos.py  product_dtos.py
app/application/queries/: auth_queries.py  inventory_queries.py  order_queries.py  product_queries.py
app/auth/: models.py  router.py  schemas.py  service.py
app/core/: config.py  database.py  deps.py  security.py
app/domain/entities/: inventory.py  order.py  product.py  user.py
app/domain/repositories/: inventory_repository.py  order_repository.py  product_repository.py  user_repository.py
app/infrastructure/api/dependencies/: auth.py  repositories.py
app/infrastructure/api/routes/: auth.py  inventory.py  orders.py  products.py  reports.py
app/infrastructure/auth/: jwt_handler.py
app/infrastructure/config/: settings.py
app/infrastructure/persistence/: database.py  models.py
app/infrastructure/persistence/repositories/: sqlalchemy_inventory_repo.py  sqlalchemy_order_repo.py  sqlalchemy_product_repo.py  sqlalchemy_user_repo.py
app/inventory/: models.py  router.py  schemas.py  service.py
app/orders/: models.py  router.py  schemas.py  service.py
app/products/: models.py  router.py  schemas.py  service.py
app/reports/: router.py  schemas.py  service.py
tests/: conftest.py  test_products.py
tests/integration/: test_auth.py  test_orders.py
tests/unit/commands/: test_auth_commands.py  test_order_commands.py  test_product_commands.py
tests/unit/entities/: test_order.py  test_product.py  test_user.py
